# Udemy_C_Projects

./: CMakeLists.txt  README.md  byteSize.c  enumCompany.c  generatePrimes.c  guessNumber.c  minuteConversion.c  pointerBasics.c  rectangle.c  someFunctions.c  stringFunctions.c  test.c  ticTacToe.c  understandingCharArrays.c  weather.c  weeklyPay.c
