cmake_minimum_required(VERSION 3.17)
project(udemy_projects C)

set(CMAKE_C_STANDARD 99)

add_executable(udemy_projects rectangle.c enumCompany.c minuteConversion.c byteSize.c weeklyPay.c guessNumber.c generatePrimes.c weather.c someFunctions.c ticTacToe.c understandingCharArrays.c stringFunctions.c pointerBasics.c test.c)